src/model/config/snapshots/cursus__model__config__template__tests__snapshot_github_detected_values_as_hints.snap
---
source: src/model/config/template.rs
expression: render(&result)
---
# [global]
# disable_dependency_cycle_warnings = false  # Suppress circular dependency warnings
# ignore = ["example-*"]                     # Glob patterns for packages to exclude from enumeration

[cargo]
enabled = true
# path = "subdir/"              # Subdirectory for Cargo.toml (relative to git root)

# [npm]
# enabled = false
# path = "subdir/"              # Subdirectory for package.json (relative to git root)
# lock_command = "npm install"  # Custom command to update the lock file
# access = "restricted"         # Access level for scoped packages: "public" or "restricted" (default: "restricted")

# [prepare]
# dependency_bump = "auto"      # Bump level for dependents: "auto" (default), "match", "patch", "minor", or "major"

# [linked-versions]
# Keep all packages at the same version (global linking).
# enabled = true

# Or define groups of packages that should share a version:
# [[linked-versions.groups]]
# packages = ["@org/prefix-*", "@org/other"]

# [git]
# enabled = false
# strategy = "push"
# # tag_format = "auto"                            # Tag format: "auto", "prefixed", or "simple"
# # release_branch_prefix = "cursus-release/"      # Prefix for release branches (branch strategy)
# # extra_files = []                               # Additional files to stage before committing

[github]
enabled = true
# owner = "acme"
# repo = "my-app"
# build_command = ""                # Shell command to build release artifacts
# pull_request_title = ""           # Custom PR title (default: "Release updates")
# [github.artifacts]                # Map of display name -> file path for release assets
